test_scores/negative_dimers/features/P51572.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P51572.pkl.xz